89 implement sse (#112)
* refactor: Add a retrieveRoomFromContext middleware

* feat(SSE): WIP

* fix(AUTH): Remove auth from version, healthz and doc routes

* fix(CORS): Add text/event-stream to OPTIONS request

* fix(CORS): Allow CORS on SSE

* Add a test sample

* fix(WIP): SSE should work now

* fix(CORS): Re-Allow all CORS

* feat(SSE): Leverage cache

Only signal client that room as changed by whatever action (change in
owner, change in users or name)

* fix(WIP): Invalidate cache even for /rooms/id/connect routes

* chore(VERSION): Update version to 0.3.0

* feat(ACK): Send connected when stream is opened

* docs: Add documentation for StreamRoom

* refactor(SSE): Move SSE to utils and add comments to functions

* perf(HEALTHZ): Remove healthz route from gin logger

* refactor(Kick): Harmonize Kick function

* refactor(SSE): Create stream at room creation to avoid confusion

* feat: Add SSE on user rename

* fix: Fix distribute on closed channel

* fix: Channel is closed when stream ends

* docs(SSE): Add comments

* refactor(CI): Check DelSub return value (Lint)

* refactor: Rename listStreamsRoom roomStreamsList

* refactor: Move newStream to CreateStream function
