# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "API instance for dionysos client application.",
+        "description": "API instance for the Dionysos client application.",
         "title": "Dionysos",
         "contact": {
             "name": "API Support",
@@ -118,7 +118,13 @@
                         }
                     },
                     "404": {
-                        "description": "Invalid user in auth method",
+                        "description": "Room not found or invalid user in auth method",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
                         "schema": {
                             "$ref": "#/definitions/utils.ErrorResponse"
                         }
@@ -297,6 +303,50 @@
                     },
                     "500": {
                         "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/rooms/{id}/stream": {
+            "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "This endpoint is used to subscribe to a SSE stream for a given room.\nThe stream will send an event when a room is updated.\nA room is updated when a user connects or disconnects from it, or when we have a owner change, and so on.",
+                "produces": [
+                    "text/event-stream"
+                ],
+                "tags": [
+                    "Rooms",
+                    "SSE"
+                ],
+                "summary": "SSE stream of a room for any updates.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Room ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Send \\\"RoomUpdate\\\" event each time room is updated. Send 200 when stream is closed"
+                    },
+                    "401": {
+                        "description": "User not authorized",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Room not found or invalid user in auth method",
                         "schema": {
                             "$ref": "#/definitions/utils.ErrorResponse"
                         }
@@ -522,7 +572,7 @@
                 "tags": [
                     "Misc"
                 ],
-                "summary": "Get the api version",
+                "summary": "Get the api version.",
                 "responses": {
                     "200": {
                         "description": "Version as x.x.x",
@@ -531,7 +581,7 @@
                         }
                     },
                     "500": {
-                        "description": "Version has not been set correctly in server side",
+                        "description": "Version has not been set correctly on the server side",
                         "schema": {
                             "$ref": "#/definitions/utils.ErrorResponse"
                         }
