# routes/router.go
@@ -7,11 +7,13 @@ import (
 	"crypto/subtle"
 	"log"
 	"net/http"
+	"strconv"
 	"time"
 
 	"github.com/Brawdunoir/dionysos-server/database"
 	"github.com/Brawdunoir/dionysos-server/models"
-	utils "github.com/Brawdunoir/dionysos-server/utils/routes"
+	"github.com/Brawdunoir/dionysos-server/utils"
+	routes "github.com/Brawdunoir/dionysos-server/utils/routes"
 	"github.com/Brawdunoir/dionysos-server/variables"
 	cache "github.com/chenyahui/gin-cache"
 	"github.com/chenyahui/gin-cache/persist"
@@ -30,8 +32,11 @@ var db *gorm.DB = database.DB
 
 // SetupRouter sets up the router
 func SetupRouter(router *gin.Engine) *gin.Engine {
-	router.Use(options)
-	router.Use(gin.Recovery())
+	router.Use(
+		gin.LoggerWithWriter(gin.DefaultWriter, "/healthz"),
+		gin.Recovery(),
+		options(),
+	)
 
 	// Connect to Redis.
 	redisURL, err := redis.ParseURL(variables.RedisHost)
@@ -43,15 +48,21 @@ func SetupRouter(router *gin.Engine) *gin.Engine {
 
 	r := router.Group(variables.BasePath)
 	{
-		// We should not use the authentication middleware for the /users endpoint because the password is generated during the user creation.
+		// We should not use the authentication middleware on these routes.
+		r.GET("/healthz", Healthz)
+		r.GET("/version", GetVersion)
+		r.GET("/doc/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
+
 		r.POST("/users", CreateUser)
 
-		userRouter := r.Group("/users", authentication)
+		r.Use(authentication)
+
+		userRouter := r.Group("/users")
 		{
 			if redisStore != nil {
 				userRouter.GET("/:id", cache.CacheByRequestURI(redisStore, 60*time.Minute), GetUser)
-				userRouter.PATCH("/:id", invalidateCacheURI, UpdateUser)
-				userRouter.DELETE("/:id", invalidateCacheURI, DeleteUser)
+				userRouter.PATCH("/:id", invalidateCacheURI("users"), UpdateUser)
+				userRouter.DELETE("/:id", invalidateCacheURI("users"), DeleteUser)
 			} else {
 				userRouter.GET("/:id", GetUser)
 				userRouter.PATCH("/:id", UpdateUser)
@@ -59,15 +70,17 @@ func SetupRouter(router *gin.Engine) *gin.Engine {
 			}
 		}
 
-		roomRouter := r.Group("/rooms", authentication)
+		roomRouter := r.Group("/rooms")
 		{
 			roomRouter.POST("", CreateRoom)
+			roomRouter.Use(retrieveRoom)
+			roomRouter.GET("/:id/stream", utils.HeadersSSE, StreamRoom)
 			if redisStore != nil {
 				roomRouter.GET("/:id", cache.CacheByRequestURI(redisStore, 60*time.Minute), GetRoom)
-				roomRouter.PATCH("/:id", invalidateCacheURI, UpdateRoom)
-				roomRouter.PATCH("/:id/connect", invalidateCacheURI, ConnectUserToRoom)
-				roomRouter.PATCH("/:id/disconnect", invalidateCacheURI, DisconnectUserFromRoom)
-				roomRouter.PATCH("/:id/kick/:userid", invalidateCacheURI, KickUserFromRoom)
+				roomRouter.PATCH("/:id", invalidateCacheURI("rooms"), UpdateRoom)
+				roomRouter.PATCH("/:id/connect", invalidateCacheURI("rooms"), ConnectUserToRoom)
+				roomRouter.PATCH("/:id/disconnect", invalidateCacheURI("rooms"), DisconnectUserFromRoom)
+				roomRouter.PATCH("/:id/kick/:userid", invalidateCacheURI("rooms"), KickUserFromRoom)
 			} else {
 				roomRouter.GET("/:id", GetRoom)
 				roomRouter.PATCH("/:id", UpdateRoom)
@@ -76,10 +89,6 @@ func SetupRouter(router *gin.Engine) *gin.Engine {
 				roomRouter.PATCH("/:id/kick/:userid", KickUserFromRoom)
 			}
 		}
-		// Version
-		r.GET("/version", GetVersion)
-		r.GET("/doc/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
-		r.GET("/healthz", Healthz)
 	}
 
 	return router
@@ -98,7 +107,7 @@ func authentication(c *gin.Context) {
 
 		if err != nil {
 			c.AbortWithStatusJSON(http.StatusNotFound, gin.H{"error": "User not found during authentication"})
-			log.Printf("Failed to find document: %v", err)
+			log.Printf("Failed to find user: %v", err)
 			return
 		}
 		// Calculate SHA-256 hashes for the provided and expected passwords.
@@ -119,32 +128,56 @@ func authentication(c *gin.Context) {
 	// set a WWW-Authenticate header to inform the client that we expect them
 	// to use basic authentication and send a 401 Unauthorized response.
 	c.Header("WWW-Authenticate", `Basic id:password charset="UTF-8"`)
-	c.AbortWithStatusJSON(http.StatusUnauthorized, utils.CreateErrorResponse("User not authorized"))
+	c.AbortWithStatusJSON(http.StatusUnauthorized, routes.CreateErrorResponse("User not authorized"))
 }
 
 // Middleware for CORS requests.
-func options(c *gin.Context) {
-	c.Header("Allow", "GET,POST,PATCH,DELETE,OPTIONS")
-	c.Header("Access-Control-Allow-Origin", "*")
-	c.Header("Access-Control-Allow-Methods", "GET,POST,PATCH,DELETE,OPTIONS")
-	c.Header("Access-Control-Allow-Headers", "X-Requested-With, Authorization, Origin, Content-Type, Accept")
-	c.Header("Content-Type", "application/json")
-	if c.Request.Method != "OPTIONS" {
-		c.Next()
-	} else {
-		c.AbortWithStatus(http.StatusOK)
+func options() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		c.Header("Allow", "GET,POST,PATCH,DELETE,OPTIONS")
+		c.Header("Access-Control-Allow-Origin", "*")
+		c.Header("Access-Control-Allow-Methods", "GET,POST,PATCH,DELETE,OPTIONS")
+		c.Header("Access-Control-Allow-Headers", "X-Requested-With, Authorization, Origin, Content-Type, Accept")
+		c.Header("Content-Type", "application/json,text/event-stream")
+		if c.Request.Method != "OPTIONS" {
+			c.Next()
+		} else {
+			c.AbortWithStatus(http.StatusOK)
+		}
 	}
 }
 
 // Invalidate cache for a given URI.
-func invalidateCacheURI(c *gin.Context) {
-	c.Next()
-	// Get the response code.
-	code := c.Writer.Status()
-	if code >= 200 && code < 300 && redisStore != nil {
-		err := redisStore.Delete(c.Request.RequestURI)
-		if err != nil {
-			log.Printf("Failed to invalidate cache: %v", err)
+func invalidateCacheURI(resource string) gin.HandlerFunc {
+	return func(c *gin.Context) {
+		c.Next()
+		// Get the response code.
+		code := c.Writer.Status()
+		if code >= 200 && code < 300 && redisStore != nil {
+			err := redisStore.Delete(resource + "/" + c.Param("id"))
+			if err != nil {
+				log.Printf("Failed to invalidate cache: %v", err)
+			}
 		}
 	}
+}
+
+func retrieveRoom(c *gin.Context) {
+	var room models.Room
+
+	id, err := strconv.ParseUint(c.Param("id"), 10, 64)
+	if err != nil {
+		log.Printf("Failed to convert room ID: %v", err)
+		c.AbortWithStatusJSON(http.StatusBadRequest, routes.CreateErrorResponse("Invalid room ID"))
+		return
+	}
+
+	err = room.GetRoom(c, db, id)
+	if err != nil {
+		log.Printf("Failed to find document: %v", err)
+		c.AbortWithStatusJSON(http.StatusNotFound, routes.CreateErrorResponse("Room not found"))
+		return
+	}
+	c.Set(variables.ROOM_CONTEXT_KEY, room)
+	c.Next()
 }
